--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 # 生产环境API基础URL
 # 这里使用相对路径，假设API和前端部署在同一域名下的不同路径
-VITE_API_BASE_URL=/api 
+VITE_API_BASE_URL=http://134.175.229.249:8080/api
+VITE_APP_TITLE=作业提交系统 
