--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 # 生产环境API基础URL
-# 这里使用 CORS.sh 代理服务，注意不要重复 /api
-VITE_API_BASE_URL=https://proxy.cors.sh/http://134.175.229.249:8080
+# 这里使用 CORS.sh 代理服务
+# 后端配置了 context-path=/api，所以这里需要带上 /api
+VITE_API_BASE_URL=https://proxy.cors.sh/http://134.175.229.249:8080/api
 VITE_APP_TITLE=作业提交系统 
